0030643: Visualization, Ray-Tracing - shader compilation errors are not properly logged

OpenGl_View::initShader() now uses OpenGl_ShaderObject::LoadAndCompile().